--- a/src/Index.html
+++ b/src/Index.html
@@ -16,7 +16,9 @@
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">Books</a>
+                <a class="navbar-brand" href="#">
+                    <i class="fas fa-book-reader fa-3x mx-3"></i>
+                    Books</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,34 +54,27 @@
                 </div>
             </nav>
         </div>
-    </header>
-    <!-- end header -->
 
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-md-7 col-sm-12">
-                <h6>AUTHOR: DAILY TUITION</h6>
-                <h1>EXCITING ADVENTURE</h1>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap
-                    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with
-                    the
-                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing
-                    software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                <button class="btn btn-light px-5 py-2">By now for $5.99</button>
-            </div>
-            <div class="col-md-5 col-sm-12">
-                <img src="../assets/header-img.png" alt="Books">
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <h6>AUTHOR: DAILY TUITION</h6>
+                    <h1>EXCITING ADVENTURE</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere accusamus eum dignissimos ipsa sequi expedita.
+                    </p>
+                    <button class="btn btn-light px-5 py-2">By now for $5.99</button>
+                </div>
+                <div class="col-md-5 col-sm-12">
+                    <img src="../assets/header-img.png" alt="Books">
+                </div>
             </div>
         </div>
-    </div>
-    <!-- end .container -->
+        <!-- end .container -->
+
+    </header>
+    <!-- end header -->
 
     <main>
         <section class="section-1">
@@ -282,7 +277,7 @@
                     </div>
                 </div>
                 <!-- end div.col-md-4.col-12.text-center -->
-                
+
                 <!-- second column -->
                 <div class="col-md-4">
                     <!-- carousel started -->
@@ -297,9 +292,11 @@
                                     <div class="card-body">
                                         <h3 class="card-title">Allen Agnes</h3>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
+                                            recusandae,
                                             veniam, illo dolor soluta assumenda
-                                            minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi
+                                            minima quia velit officia sit exercitationem nam ipsa, repellendus aut
+                                            facilis quasi
                                             voluptas!
                                         </p>
                                         <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
@@ -316,9 +313,11 @@
                                     <div class="card-body">
                                         <h3 class="card-title">Amiel Barbara</h3>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
+                                            recusandae,
                                             veniam, illo dolor soluta assumenda
-                                            minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi
+                                            minima quia velit officia sit exercitationem nam ipsa, repellendus aut
+                                            facilis quasi
                                             voluptas!
                                         </p>
                                         <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
@@ -365,11 +364,12 @@
                 <div class="col-md-5">
                     <h1 class="text-light">About Us</h1>
                     <p class="text-muted">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea similique illum corrupti
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea similique illum
+                        corrupti
                     </p>
                     <p class="t-4 text-muted">
                         Copyright ©2019 All rights reserved | This template is made with by
-                        <span>Daily Tuition</span> 
+                        <span>Daily Tuition</span>
                     </p>
                 </div>
                 <div class="col-md-5">
