--- a/src/Index.html
+++ b/src/Index.html
@@ -80,12 +80,12 @@
         <section class="section-1">
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-12">
                         <div class="pray">
                             <img src="../assets/pexels-photo-1904769.jpeg" alt="Pray">
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-12">
                         <div class="panel text-left">
                             <h1>Mr.Devid Smith</h1>
                             <p class="pt-4">
