--- a/src/Index.html
+++ b/src/Index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand text-light" href="#">
                     <i class="fas fa-book-reader fa-3x mx-3"></i>
                     Books</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -29,17 +29,17 @@
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Course</a>
+                            <a class="nav-link" href="#">COURSE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Price</a>
+                            <a class="nav-link" href="#">PRICE</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a class="nav-link" href="#">Pages</a>
+                                <a class="nav-link" href="#">PAGES</a>
                                 <div class="dropdown-content">
                                     <a href="#">Generic</a>
                                     <a href="#">Element</a>
@@ -47,10 +47,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Fact</a>
+                            <a class="nav-link" href="#">FACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">ABOUT</a>
                         </li>
                     </ul>
                 </div>
@@ -416,6 +416,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
