--- a/src/Index.html
+++ b/src/Index.html
@@ -29,17 +29,17 @@
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                            <a class="nav-link text-light" href="#">HOME <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">COURSE</a>
+                            <a class="nav-link text-light" href="#">COURSE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PRICE</a>
+                            <a class="nav-link text-light" href="#">PRICE</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a class="nav-link" href="#">PAGES</a>
+                                <a class="nav-link text-light" href="#">PAGES</a>
                                 <div class="dropdown-content">
                                     <a href="#">Generic</a>
                                     <a href="#">Element</a>
@@ -47,10 +47,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">FACT</a>
+                            <a class="nav-link text-light" href="#">FACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link text-light" href="#">ABOUT</a>
                         </li>
                     </ul>
                 </div>
